--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,10 +1,10 @@
 name: first workflow
 on: workflow_dispatch
 jobs:
-  first_job:
-    runs_on: ubuntu-latest
+  first-job:
+    runs-on: ubuntu-latest
     steps:
       - name: Print greeting
         run: echo "Hello World!"
       - name: Print goodbye
-        run : echo "Good bye!!!"
+        run  echo "Good bye!!!"
