--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,12 +1,17 @@
-name: first workflow
-on: workflow_dispatch
+name: Test Project
+on: push
 jobs:
-  first-job:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Print greeting
-        run: echo "Hello World!"
-      - name: Print goodbye
-        run: |
-              echo "First output"
-              echo "Second output"
+      - name: Get Code
+        uses: actions/checkout@v3
+      - name: Install NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm test
+      
